--- a/application/views/common-css/4phone.css
+++ b/application/views/common-css/4phone.css
@@ -1075,6 +1075,7 @@
     -ms-flex-pack: start;
     justify-content: flex-start;
   }
+  .preview{ height: auto; margin: 5px 0;}
 }
 
 /*media*/
