--- a/application/views/common-css/system_messages.css
+++ b/application/views/common-css/system_messages.css
@@ -22,7 +22,7 @@
   content: "";
   left: -26px;
   position: absolute;
-  top: 0;
+  top:2px;
   z-index: 2;
   width: 30px;
   height: 30px;
